--- a/Asynchronous_RestTemplate/.project
+++ b/Asynchronous_RestTemplate/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Asynchronous_RestTemplate</name>
+	<name>Asynchronous_Runner</name>
 	<comment></comment>
 	<projects>
 	</projects>
